--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@clerk/nextjs": "^5.2.13",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.17.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/blob": "^0.23.4",
+    "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -32,7 +34,8 @@
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/markdown-draft-js": "^2.2.7",
