--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/blob": "^0.23.4",
     "axios": "^1.7.3",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -26,6 +27,7 @@
     "markdown-draft-js": "^2.4.0",
     "nanoid": "^5.0.7",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
@@ -38,6 +40,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/markdown-draft-js": "^2.2.7",
     "@types/node": "^20",
     "@types/react": "^18",
