--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.4.0",
